--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -47,16 +47,49 @@
 .advantages-section__item {
     padding-left: 70px;
     margin-bottom: 26px;
-    &-heading {
-        @include reset;
-        font-size: 18px;
-        font-weight: 700;
-        color: $black;
-        margin-bottom: 26px;
+}
+
+.advantages-section__item-heading {
+    position: relative;
+    @include reset;
+    font-size: 18px;
+    font-weight: 700;
+    color: $black;
+    margin-bottom: 26px;
+    &--house::before {
+        content: "";
+        position: absolute;
+        top: -8px;
+        left: -48px;
+        width: 39px;
+        height: 37px;
+        background-image: url(../../img/icon-house.svg);
+        background-repeat: no-repeat;
     }
-    &-text {
-        @include reset;
-        line-height: 21px;
-        color: $black-light;
+    &--gift::before {
+        content: "";
+        position: absolute;
+        top: -11px;
+        left: -45px;
+        width: 32px;
+        height: 38px;
+        background-image: url(../../img/icon-gift.svg);
+        background-repeat: no-repeat;
     }
+    &--burger::before {
+        content: "";
+        position: absolute;
+        top: -5px;
+        left: -52px;
+        width: 40px;
+        height: 35px;
+        background-image: url(../../img/icon-burger.svg);
+        background-repeat: no-repeat;
+    }
+}
+
+.advantages-section__item-text {
+    @include reset;
+    line-height: 21px;
+    color: $black-light;
 }
