--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,3 +1,6 @@
 $black: #000000;
 $black-light: #333333;
 $white: #ffffff;
+$mobile-widht-only: 767px;
+$tablet-width: 768px;
+$desktop-width: 1200px;
