--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -1,6 +1,11 @@
 .about-us__content {
     @include center;
     text-align: center;
+    @media (min-width: $tablet-width) {
+        width: 458px;
+        padding: 0;
+        margin: 0 auto;
+    }
 }
 
 .about-us__heading {
@@ -8,14 +13,22 @@
     font-size: 21px;
     font-weight: 700;
     color: $black;
-    margin-top: 33px;
-    margin-bottom: 32px;
+    margin-top: 37px;
+    margin-bottom: 21px;
+    @media (min-width: $tablet-width) {
+        font-size: 30px;
+    }
 }
 
 .about-us__text {
     @include reset;
     line-height: 24px;
     color: $black-light;
+    @media (max-width: $mobile-widht-only) {
+        br {
+            display: none;
+        }
+    }
 }
 
 .about-us__link {
@@ -33,4 +46,5 @@
 
 .about-us__map {
     display: block;
+    width: 100%;
 }
