--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,14 +1,59 @@
 .advantages-section__header {
+    margin-bottom: 35px;
+    &--last {
+        margin-bottom: 0;
+    }
+    @media (min-width: $tablet-width) {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+}
+
+.advantages-section__header-content {
     text-align: center;
     background-color: #EEEEEE;
     padding-top: 26px;
     padding-bottom: 24px;
-    &--lightblue {
-        background-color: #81B3D2;
+    /*
+    &--first {
+        clip-path: polygon(0 2%, 50% 8%, 100% 3%, 100% 100%, 0 100%);
+        @media (min-width: $tablet-width) {
+            clip-path: none;
+        }
+    }
+    */
+    &--last {
+        padding-top: 39px;
+        @media (min-width: $tablet-width) {
+            order: 2;
+        }
+    }
+    &:first-child {
+        clip-path: polygon(0 2%, 50% 8%, 100% 3%, 100% 100%, 0 100%);
+        @media (min-width: $tablet-width) {
+            clip-path: none;
+        }
+    }
+}
+
+@media (min-width: $tablet-width) {
+    .advantages__inner-sections .advantages-section__header-content {
+        height: 256px;
+        box-sizing: border-box;
+    }
+}
+
+.advantages-section__header-content-lightblue {
+    background-color: #81B3D2;
+    color: $white;
+    padding-top: 58px;
+    padding-bottom: 37px;
+    margin-bottom: 0;
+    .advantages-section__header-text {
         color: $white;
-        padding-top: 58px;
-        padding-bottom: 44px;
-        margin-bottom: 0;
+    }
+    .advantages-section__header-heading {
+        color: $white;
     }
 }
 
@@ -17,36 +62,85 @@
     font-size: 18px;
     font-weight: 700;
     color: $black;
-    margin-bottom: 20px;
-    &--white {
-        color: $white;
-    }
+    margin-bottom: 10px;
 }
 
 .advantages-section__header-text {
     @include reset;
     line-height: 21px;
     color: $black-light;
-    &--white {
-        color: $white;
-    }
+    padding: 0 10px;
 }
 
 .advantages-section__header-number {
-    margin-bottom: 28px;
+    @include reset;
+    margin-bottom: 17px;
+    line-height: 21px;
 }
 
 .advantages-section__img {
     display: block;
-    margin-bottom: 26px;
-    &-last {
-        margin-bottom: 0;
+    @media (min-width: $tablet-width) {
+        width: 512px;
+        height: 256px;
+    }
+    @media (min-width: $desktop-width) {
+        width: 800px;
+        height: 256px;
+    }
+}
+
+.advantages-section__content {
+    @include center;
+    @media (min-width: $tablet-width) {
+        width: 768px;
+        padding-left: 34px;
+        padding-right: 31px;
+        display: flex;
+        justify-content: space-between;
+        box-sizing: border-box;
+    }
+    @media (min-width: $desktop-width) {
+        width: 1200px;
+        padding-left: 58px;
+        padding-right: 78px;
     }
 }
 
 .advantages-section__item {
-    padding-left: 70px;
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 26px;
+    &--last {
+        margin-bottom: 35px;
+    }
+}
+
+@media (min-width: $tablet-width) {
+    .advantages-section__item {
+        width: 185px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.advantages-section__item-icon {
+    margin-right: 9px;
+    @media (min-width: $tablet-width) {
+        margin-right: 0;
+        &:first-child {
+            width: 75px;
+            height: 72px;
+        }
+    }
+}
+
+@media (min-width: $tablet-width) {
+    .advantages-section__content {
+        text-align: center;
+    }
 }
 
 .advantages-section__item-heading {
@@ -55,7 +149,8 @@
     font-size: 18px;
     font-weight: 700;
     color: $black;
-    margin-bottom: 26px;
+    margin-bottom: 16px;
+    /*
     &--house::before {
         content: "";
         position: absolute;
@@ -65,7 +160,7 @@
         height: 37px;
         background-image: url(../../img/icon-house.svg);
         background-repeat: no-repeat;
-    }
+
     &--gift::before {
         content: "";
         position: absolute;
@@ -86,10 +181,18 @@
         background-image: url(../../img/icon-burger.svg);
         background-repeat: no-repeat;
     }
+    */
 }
 
 .advantages-section__item-text {
     @include reset;
     line-height: 21px;
     color: $black-light;
+}
+
+@media (min-width: $tablet-width) {
+    .advantages__inner-sections {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
