--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,40 +1,100 @@
 .page-header {
-    display: flex;
-    flex-wrap: wrap;
-    &__logo {
-        margin-right: auto;
-        margin-left: auto;
+    position: relative;
+    margin: 0 auto;
+    @media (min-width: $tablet-width) {
+        min-width: $tablet-width;
+    }
+    @media (min-width: $desktop-width) {
+        min-width: $desktop-width;
+    }
+}
+
+.page-header__logo {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    @media (min-width: $tablet-width) {
+        z-index: 3;
+    }
+}
+
+@media (min-width: $tablet-width) {
+    .main-nav__toggle {
+        display: none;
     }
 }
 
 .header-content {
     width: 100%;
-    background: url(../../img/bcg-header-mobile.jpg);
-    &__img {
-        display: block;
-        margin: 0 auto;
+    background-image: url(../../img/bcg-header-mobile.jpg);
+    background-repeat: no-repeat;
+    clip-path: polygon(0 0, 100% 0, 100% 93%, 50% 99%, 0 93%);
+    margin: 0 auto;
+    padding-bottom: 85px;
+    @media (min-resolution: 2dppx) {
+        background-image: url(../../img/bcg-header-mobile@2x.jpg);
     }
-    &__line1 {
-        margin-top: 90px;
-        margin-bottom: 7px;
+}
+
+.header-content__img {
+    display: block;
+    margin: 0 auto;
+}
+
+.header-content__line1 {
+    padding-top: 90px;
+    margin-bottom: 7px;
+}
+
+.header-content__line2 {
+    margin-bottom: 32px;
+}
+
+.header-content__line3 {
+    margin-bottom: 37px;
+}
+
+@media (min-width: $tablet-width) {
+    .header-content {
+        background-image: url(../../img/bcg-header-tablet.jpg);
+        background-repeat: no-repeat;
+        margin-top: 8px;
     }
-    &__line2 {
-        margin-bottom: 32px;
+    .header-content__line1 {
+        width: 188px;
+        height: 45px;
     }
-    &__line3 {
-        margin-bottom: 37px;
+    .header-content__line2 {
+        width: 175px;
+        height: 29px;
     }
-    &__line4 {
-        margin-bottom: 85px;
+    .header-content__line3 {
+        width: 461px;
+        height: 80px;
+    }
+    .header-content__line4 {
+        width: 283px;
+        height: 75px;
+    }
+}
+
+@media (min-width: $desktop-width) {
+    .header-content {
+        background-image: url(../../img/bcg-header-desktop.jpg);
+        background-repeat: no-repeat;
+        margin-top: 8px;
     }
 }
 
 .header-content__inner {
     height: 156px;
     background: url(../../img/bcg-header-mobile-inner.jpg);
-    &-img {
-        display: block;
-        margin: 0 auto;
-        margin-top: 52px;
-    }
+}
+
+.header-content__inner-img {
+    display: block;
+    margin: 0 auto;
+    margin-top: 52px;
 }
