--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -5,15 +5,30 @@
 .page-main__header {
     @include center;
     margin-bottom: 27px;
-    &-heading {
-        @include reset;
-        font-size: 18px;
-        font-weight: 700;
-        text-align: center;
-        margin-bottom: 30px;
+    @media (min-width: $tablet-width) {
+        width: $tablet-width;
+        padding: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
-    &-text {
-        @include reset;
-        text-align: center;
+}
+
+.page-main__header-text {
+    @include reset;
+    text-align: center;
+}
+
+.page-main__header-heading {
+    width: 260px;
+    @include reset;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    @media (min-width: $tablet-width) {
+        width: 450px;
+        font-size: 21px;
     }
 }
