--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,34 +1,50 @@
-.page-main {
-    margin-top: 32px;
-}
+    .page-main {
+        margin-top: 24px;
+        @media (min-width: $tablet-width) {
+            margin-top: 59px;
+        }
+        @media (min-width: $desktop-width) {
+            margin-top: 91px;
+        }
+    }
 
-.page-main__header {
-    @include center;
-    margin-bottom: 27px;
-    @media (min-width: $tablet-width) {
-        width: $tablet-width;
-        padding: 0;
+    .inner-main {
+        line-height: 24px;
+    }
+
+    .page-main__header {
+        @include center;
+        margin-bottom: 27px;
+        @media (min-width: $tablet-width) {
+            width: 490px;
+            padding: 0;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    .inner-main .page-main__header {
+        @media (min-width: $tablet-width) {
+            width: 435px;
+        }
+    }
+
+    .page-main__header-text {
+        @include reset;
+        text-align: center;
+    }
+
+    .page-main__header-heading {
+        width: 260px;
+        @include reset;
+        font-size: 18px;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 30px;
         margin-left: auto;
         margin-right: auto;
+        @media (min-width: $tablet-width) {
+            width: inherit;
+            font-size: 21px;
+        }
     }
-}
-
-.page-main__header-text {
-    @include reset;
-    text-align: center;
-}
-
-.page-main__header-heading {
-    width: 260px;
-    @include reset;
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    @media (min-width: $tablet-width) {
-        width: 450px;
-        font-size: 21px;
-    }
-}
